fix: layout issues

--- a/template/src/index.css
+++ b/template/src/index.css
@@ -44,6 +44,7 @@ html, body {
     padding: 0;
     font-family: 'Atkinson Hyperlegible';
     font-size: 18px;
+    background: #e8d0c0;
 }
 
 a {
